<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/Theme.GDSampleAppTheme.BbdLightGrey"
        android:padding="5dp"
        android:weightSum="1">

    <com.good.gd.widget.GDTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:text="@string/incoming_screen_string"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <View
        android:id="@+id/left_seperator1"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:background="@drawable/button_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reject_string"
        android:id="@+id/decline"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_alignTop="@+id/accept"
        android:layout_toEndOf="@+id/left_seperator1"/>

    <Button
        android:id="@+id/accept"
        android:background="@drawable/button_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_string"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/left_seperator1"/>

    <Switch
        android:id="@+id/switchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:textOn="@string/unlocked"
        android:textOff="@string/locked"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:checked="false"/>


</RelativeLayout>