<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_layout">

    <include layout="@layout/sample_app_top_bar"/>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/Theme.GDSampleAppTheme.BbdDarkGrey"
        android:padding="5dp"
        android:weightSum="1">

    <com.good.gd.widget.GDTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:text="@string/incall_screen_string"
        android:textColor="#FFFFFF"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:background="@drawable/button_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endcall_string"
        android:id="@+id/decline"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Switch
        android:id="@+id/switchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:textOn="@string/unlocked"
        android:textOff="@string/locked"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:checked="false"/>
    </RelativeLayout>

</LinearLayout>